--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --blue-color: #1992d4
+}
+
 @font-face {
     font-family: roboto;
     src: url(Roboto-Regular.ttf);
@@ -31,7 +35,7 @@ body {
 
 .sidebar {
     grid-column: 1 / 2;
-    background-color: #1992d4;
+    background-color: var(--blue-color);
     color: white;
     display: flex;
     flex-direction: column;
@@ -79,7 +83,7 @@ body {
 }
 
 .big-user-photo {
-    width: 60px;
+    width: 70px;
     height: auto;
 }
 
@@ -93,6 +97,15 @@ body {
 .header {
     background-color: white;
     width: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    padding: 5px 30px 20px 30px;
+    font-weight: 600;
+    gap: 15px;
+}
+
+.hello {
+    font-size: 12px;
 }
 
 .projects.news {
@@ -122,7 +135,6 @@ body {
 
 .search-section {
     display: flex;
-    padding: 15px;
     gap: 20px;
     align-items: center;
 }
@@ -133,10 +145,8 @@ body {
 }
 .user-info {
     display: flex;
-    padding: 15px;
     align-items: center;
     gap: 20px;
-    width: 100%;
 }
 
 .buttons {
@@ -144,6 +154,17 @@ body {
     margin-left: auto;
     gap: 30px;
     align-items: center;
+    margin-right: 75px;
+}
+
+button {
+    background-color: var(--blue-color);
+    border: none;
+    border-radius: 20px;
+    color: white;
+    width: 100px;
+    height: 40px;
+    font-weight: 600;
 }
 
 input {
@@ -155,11 +176,16 @@ input {
     border: none;
     border-radius: 20px;
     height: 25px;
-    padding: 10px;
+    padding: 12px;
+    outline: none;
 }
 
 .small-username {
     font-weight: 600;
+}
+
+.big-username {
+    font-size: 20px;
 }
 
 .project-card {
