--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
-    --blue-color: #1992d4
+    --blue-color: #1992d4;
+    --yellow-color: #f0b429;
+    --grey-color: #676767;
 }
 
 @font-face {
@@ -8,8 +10,8 @@
 }
 
 html {
-    height: 100vh;
-    width: 100vw;
+    max-height: 100%;
+    width: 100%;
     margin: 0;
     border: 0;
     padding: 0;
@@ -18,6 +20,7 @@ html {
 * {
     margin: 0;
     padding: 0;
+    border: 0;
     font-family: roboto, sans-serif;
     box-sizing: border-box;
 }
@@ -28,9 +31,9 @@ ul {
 }
 
 body {
+    max-height: 100%;
     display: grid;
     grid-template-columns: 1.25fr 5fr;
-    height: 100%;
 }
 
 .sidebar {
@@ -43,6 +46,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     padding-left: 20px;
+    height: 100%;
 }
 
 .sidebar li {
@@ -50,6 +54,7 @@ body {
     padding-left: 20px;
     gap: 10px;
     align-items: center;
+    cursor: pointer;
 }
 
 .options-1,
@@ -101,7 +106,7 @@ body {
     grid-template-rows: 1fr 1fr;
     padding: 5px 30px 20px 30px;
     font-weight: 600;
-    gap: 15px;
+    box-shadow: 0px 5px 5px lightgray;
 }
 
 .hello {
@@ -113,6 +118,7 @@ body {
     grid-template-columns: 1.5fr 1.5fr 1fr;
     padding: 30px;
     gap: 30px;
+    height: 100%;
 }
 
 .projects {
@@ -121,16 +127,63 @@ body {
 
 .card-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 100%;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    grid-template-rows: repeat(3, minmax(max-content, 1fr));
     gap: 30px;
+    height: 82%;
+}
+
+.project-card {
+    border-radius: 20px; 
+    padding: 20px 40px 20px 20px;
+    border-left: 8px solid var(--yellow-color);
+    position: relative;
+    box-shadow: 5px 5px 5px lightgray;
+}
+
+.icons {
+    display: block;
+   display: flex;
+   gap: 20px;
+   position: absolute;
+   bottom: 20px;
+   right: 40px; 
+   margin-top: 5px;
+   margin-left: 5px;
+}
+
+.icons:hover {
+    cursor: pointer;
+}
+
+.project-title {
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.project-text {
+    color: var(--grey-color);
+}
+
+.projects-label,
+.announcements-label,
+.trending-label {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.projects-label {
+    padding-bottom: 15px;
 }
 
 .news {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 80%;
+    gap: 15px;
 }
 
 .search-section {
@@ -192,12 +245,84 @@ input {
     background-color: white;
 }
 
-.announcements-list {
-    background-color: white;
-    height: 100%;
-}
-
+.announcements-list,
 .trending-list {
     background-color: white;
     height: 100%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    box-shadow: 5px 5px 5px lightgray;
+}
+
+.announcement-title {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.announcement-text {
+    font-size: 14px;
+    color: var(--grey-color);
+}
+
+.announcement {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.announcement:nth-child(1),
+.announcement:nth-child(2) {
+    border-bottom: 1px solid silver;
+    padding-bottom: 15px;
+}
+
+.trending li {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+
+ul.trending {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 15px;
+}
+
+.trending > img {
+    height: 50px;
+    width: auto;
+}
+
+.info > .username {
+    font-weight: 600;
+}
+
+.info > .user-project {
+    color: var(--grey-color);
+    font-size: 14px;
+}
+
+.trending > .info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.spacer {
+    height: 10px;
+}
+
+button:hover {
+    cursor: pointer;
+    opacity: .3;
+    transition: opacity 0.5s ease;
+}
+
+button:active {
+    transform: translateY(1px);
 }
